# Ising-model

./: .gitignore  CMakeLists.txt  Makefile  README.md  requirements.txt
MPI/: CMakeLists.txt
MPI/include/: LatticeWorker.h
MPI/src/: LatticeWorker.cpp  main.cpp
include/: Lattice1D.h  Lattice2D.h  LatticeBase.h
lib/: Lattice1D.cpp  Lattice2D.cpp  LatticeBase.cpp
scripts/: .plot.py.swp  .timing.sh.swp  Ising.sh  import numpy as np.py  plot.py  plot.sh  timing.py  timing.sh
src/: main.cpp  test.cpp  timing.cpp
